one exercise left

--- a/views/index.html
+++ b/views/index.html
@@ -4,17 +4,20 @@
     <title>Backend All FreeCodeCamp Excercise</title> 
     <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"  type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
-    <link href="/public/style.css", rel="stylesheet", type="text/css">
+    <link href="style.css", rel="stylesheet", type="text/css">
 </head>
   <body>
     <div>
+      FreeCodeCamp All Exercise for Bakend Development API's
+    </div>
+    <div>
         <li>
-            <ol>Express Node JS<a href="/views/exercises/express.html"></a></ol>
-            <ol>Header Parser Node JS <a href="/views/exercises/headerParser.html"></a></ol>
-            <ol>TimeStamp Endpoint <a href="/views/exercises/timestamp.html"></a></ol>
-            <ol>Using MongoDB, Mongo-Mongoose <a href="/views/exercises/mongomongoose.html"></a></ol>
-            <ol>URL Shortner Excercise <a href="/views/exercises/urlshortner.html"></a></ol>
-            <ol>Track All User Exercise<a href="/views/exercises/excercise_tracker.html"></a></ol>
+            <ol><a href="/views/exercises/express.html">Express Node JS</a></ol>
+            <ol><a href="/views/exercises/headerParser.html">Header Parser Node JS </a></ol>
+            <ol><a href="/views/exercises/timestamp.html">TimeStamp Endpoint </a></ol>
+            <ol><a href="/views/exercises/mongomongoose.html">Using MongoDB, Mongo-Mongoose </a></ol>
+            <ol><a href="/views/exercises/urlshortner.html">URL Shortner Excercise </a></ol>
+            <ol><a href="/views/exercises/exercise_tracker.html">Track All User Exercise</a></ol>
         </li>
     </div>
   </body>
