--- a/views/exercises/exercise_tracker.html
+++ b/views/exercises/exercise_tracker.html
@@ -40,7 +40,7 @@
         />
         <input
           id="dur"
-          type="text"
+          type="number"
           name="duration"
           placeholder="duration* (mins.)"
         />
