--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,7 @@
             <ol><a href="/views/exercises/mongomongoose.html">Using MongoDB, Mongo-Mongoose </a></ol>
             <ol><a href="/views/exercises/urlshortner.html">URL Shortner Excercise </a></ol>
             <ol><a href="/views/exercises/exercise_tracker.html">Track All User Exercise</a></ol>
+            <ol><a href="/views/exercises/file_meta_data.html">File Meta Data</a></ol>
         </li>
     </div>
   </body>
